--- a/src/Comeponents/ChannelStats/DashboardStats.css
+++ b/src/Comeponents/ChannelStats/DashboardStats.css
@@ -5,7 +5,7 @@
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
-   
+   height: 45%;
     border: 1px solid rgb(221, 221, 221);
   }
   
@@ -52,8 +52,8 @@
   }
   
   .chart-section {
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
+    /* border-top: 1px solid #ddd;
+    padding-top: 20px; */
   }
   
   .chart {
@@ -105,4 +105,8 @@
   .graph{
     width: 
     -webkit-fill-available;
+
+  }
+  .grapheses{
+    height: 250%;
   }
