--- a/src/Comeponents/Sidebar/Sidebar.css
+++ b/src/Comeponents/Sidebar/Sidebar.css
@@ -18,12 +18,12 @@
   }
   
   .profile-image {
-    width: 80px;
-    height: 80px;
+   width: 100%;
+ 
     border-radius: 50%;
     margin-bottom: 10px;
     object-fit: cover;
-    border: 3px solid #ffeb3b;
+   
   }
   
   .profile-name {
@@ -116,9 +116,10 @@
     margin-bottom: 10px;
   }
   
-  .header h2 {
-    font-size: 20px;
-    font-weight: bold;
+  .header span {
+    font-size: 22px;
+    font-weight: 600;
+    font-family: sans-serif;
   }
   
   .advanced-mode-button {
@@ -127,7 +128,8 @@
     border-radius: 20px;
     padding: 8px 16px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: 600;
   }
   
   .advanced-mode-button:hover {
@@ -146,13 +148,13 @@
   }
   
   .tab {
-    font-size: 16px;
+    font-size: 12px;
     color: #666;
     cursor: pointer;
   }
   
   .tab.active {
-    font-weight: bold;
+  
     color: #000;
     border-bottom: 2px solid #000;
     padding-bottom: 4px;
@@ -192,19 +194,19 @@
     bottom: -3px;
     left: 0;
     transform: rotateY(90deg); /* Initially hidden */
-    transition: transform 0.25s linear;
+    transition: transform 0s linear;
   }
   .tabs-container span {
     position: relative;
     display: inline-block;
     margin-right: 10px; /* Adds space between items */
-    padding: 5px;
+ padding-left: 5px;
     cursor: pointer;
     font-size: 15px;
     font-weight: 600;
     font-family: sans-serif;
-    text-transform: uppercase;
-    transition: transform 0.25s ease;
+    /* text-transform: uppercase; */
+    /* transition: transform 0.25s ease; */
   }
   .over{
     overflow-y: auto;
@@ -224,4 +226,13 @@
     width: 100%;
     left: -20px !important;
     top: -50px !important;
+  }
+  .nov{
+    font-size: 9px;
+    font-weight: 600;
+    font-family: sans-serif;
+    color: #333;
+  }
+  .daete{
+    width: 70%;
   }
