--- a/src/Comeponents/ChannelStats/DashboardStats.css
+++ b/src/Comeponents/ChannelStats/DashboardStats.css
@@ -5,7 +5,7 @@
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
-   height: 45%;
+   height: 73vh;
     border: 1px solid rgb(221, 221, 221);
   }
   
@@ -49,6 +49,7 @@
     color: #888;
     font-size: 10px;
     font-weight: lighter;
+    white-space: pre;
   }
   
   .chart-section {
@@ -107,6 +108,6 @@
     -webkit-fill-available;
 
   }
-  .grapheses{
+  /* .grapheses{
     height: 250%;
-  }
+  }  */
