--- a/src/Comeponents/RealtimeDashboard/RealtimeDashboard.css
+++ b/src/Comeponents/RealtimeDashboard/RealtimeDashboard.css
@@ -38,7 +38,7 @@
   
   .label {
     font-size: 14px;
-    color: #888;
+    color: #343a40c7;
   }
   
   .live-count {
@@ -47,7 +47,7 @@
     font-size: 14px;
     color: black;
     background-color: #8888882e;
-    border: 1px solid #8888;
+    border: 0px solid #8888;
     border-radius: 15px;
     cursor: pointer;
     height: 30px;
@@ -58,7 +58,7 @@
     font-size: 14px;
     color: black;
     background-color: #8888882e;
-    border: 1px solid #888888f1;
+    border: 0px solid #888888f1;
     border-radius: 15px;
     cursor: pointer;
     height: 30px;
@@ -112,12 +112,12 @@
   
   .title {
     
-  font-size: 14px;
+  font-size: 13px;
   }
   
   .views {
     font-size: 12px;
-    color: #888;
+    color: #343a40c7;
   }
   
   .see-more {
@@ -136,22 +136,73 @@
     background-color: #8888882b;
   }
   .child{
-    height: 30px;
-    border-radius: 10px;
+    height: 35px;
+    border-radius: 5px;
   }
   .childs{
     width: 70px;
     height: 50px;
     border-radius: 10px;
-margin-left: 10px;
+
 margin-right: 10px;
   }
   .sizefontcircle{
     font-size: 9px !important;
+    color: rgb(12, 172, 236);
    
   }
   .sizew{display: flex;
-    gap: 5px;
+   font-size: 13px;
       justify-content: flex-start;
       align-items: center;
+      gap: 5px;
   }
+  .live-count{
+    font-weight: 600;
+  }
+  @keyframes opacity-animation {
+    0% {
+      opacity: 0;
+    }
+  }
+  
+  @keyframes pulse-animation {
+    0% {
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 0.8;
+    }
+    70% {
+      transform: translate(-50%, -50%) scale(3);
+      opacity: 0;
+    }
+    100% {
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 0;
+    }
+  }
+  
+  .pulse {
+    position: relative;
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    
+    background: rgb(12, 172, 236);
+    border-radius: 50%;
+    /* animation: opacity-animation 1s linear infinite; */
+  }
+  
+  .pulse:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background: rgb(12, 172, 236); /* Same red color for the pulse */
+    border-radius: 50%;
+    opacity: 0.5;
+    transform: translate(-50%, -50%) scale(0);
+    animation: pulse-animation 3s infinite;
+  }
+  
