--- a/src/Comeponents/Sidebar/Sidebar.css
+++ b/src/Comeponents/Sidebar/Sidebar.css
@@ -4,7 +4,6 @@
     background-color: #fff;
     border-right: 1px solid #ddd;
     height: 85vh;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -27,13 +26,13 @@
   }
   
   .profile-name {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     margin: 0;
   }
   
   .profile-subname {
-    font-size: 14px;
+    font-size: 13px;
     color: #888;
     margin: 0;
   }
@@ -60,11 +59,13 @@
     font-size: 20px;
     margin-right: 15px;
     color: #333;
+    
   }
   
   .menu-item span {
-    font-size: 14px;
-    color: #333;
+    font-size: 15px;
+    color:black;
+    font-weight: 500;
   }
   
   .menu-item.active {
@@ -92,8 +93,9 @@
   }
   
   .settings span {
-    font-size: 14px;
-    color: #333;
+    font-size: 15px;
+    color: black;
+    font-weight: 500;
   }
   
   .settings:hover {
@@ -117,9 +119,9 @@
   }
   
   .header span {
-    font-size: 22px;
-    font-weight: 600;
-    font-family: sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   
   .advanced-mode-button {
@@ -202,9 +204,9 @@
     margin-right: 10px; /* Adds space between items */
  padding-left: 5px;
     cursor: pointer;
-    font-size: 15px;
-    font-weight: 600;
-    font-family: sans-serif;
+    font-size: 17px;
+    font-weight: 100;
+    /* font-family: sans-serif; */
     /* text-transform: uppercase; */
     /* transition: transform 0.25s ease; */
   }
@@ -228,11 +230,35 @@
     top: -50px !important;
   }
   .nov{
-    font-size: 9px;
-    font-weight: 600;
-    font-family: sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    /* letter-spacing: 0.2px; */
+    /* font-family: sans-serif; */
     color: #333;
   }
-  .daete{
+  /* .daete{
     width: 70%;
-  }
+  } */
+ /* Applies to the entire document or a specific container */
+::-webkit-scrollbar {
+  width: 8px; /* Adjust the width of the scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #c6c6c6; /* Scrollbar thumb color */
+  border-radius: 0px; /* Rounded corners for the scrollbar thumb */
+ 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8a8a8; /* Darker color on hover for the scrollbar thumb */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f4f4f4; /* Scrollbar track color */
+  border-radius: 0px; /* Rounded corners for the scrollbar track */
+}
+
+::-webkit-scrollbar-track:hover {
+  background-color: #e0e0e0; /* Slightly darker track color on hover */
+}
